# amplifier-bundle-system-design

./: .gitignore  README.md  bundle.dot  bundle.md  investigation.md
agents/: design-critic.md  design-writer.md  systems-architect.md  systems-design-critic.md
amplifier-bundle-behavior-maker/docs/: JOURNEY.md
behaviors/: system-design.yaml  systems-design.yaml
context/: adversarial-perspectives.md  instructions.md  system-design-principles.md  tradeoff-frame.md
docs/: agentic-systems-design.md  bundle-behavioral-spec-foundation.md  bundle-composition-strategy.md  prompts.md
docs/amplifier-facilities/: README.md  bundles.md  content.md  modes.md  recipes.md  skills.md  superpowers.md
docs/planning/: plan.v2.md  plan.v3.md
docs/plans/: 2026-04-13-mechanism-plan.md  checkpoint-3-design-modes.md  checkpoint-4-design-agents.md  checkpoint-5-design-recipes.md
modes/: design-review.md  design.md  system-design.md  systems-design-review.md  systems-design.md
modules/hooks-design-context/: pyproject.toml
modules/hooks-design-context/amplifier_module_hooks_design_context/: __init__.py
recipes/: codebase-understanding.yaml  design-exploration.yaml  system-design-cycle.yaml  systems-design-cycle.yaml  systems-design-exploration.yaml  systems-design-review.yaml
skills/adversarial-review/: SKILL.md
skills/design-philosophy-domain-driven/: SKILL.md
skills/design-philosophy-linux/: SKILL.md
skills/design-philosophy-object-oriented/: SKILL.md
skills/design-review-methodology/: SKILL.md
skills/system-design-methodology/: SKILL.md
working/: notes.md
(+39 files in other folders)
