[project]
name = "amplifier-module-hooks-design-context"
version = "0.1.0"
description = "Injects design-state awareness into agent context — existing design docs, design phase, and design skills available."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["amplifier-core"]

[project.entry-points."amplifier.modules"]
hooks-design-context = "amplifier_module_hooks_design_context:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_design_context"]
